--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">TheStartUpFest</string>
+    <string name="app_name">The StartUp Fest</string>
+    <string name="item_startup_nome">NOME</string>
+    <string name="item_startup_segmento">SEGMENTO</string>
+
 </resources>
